Light/dark mode fix

--- a/portfolio/src/components/Header.css
+++ b/portfolio/src/components/Header.css
@@ -9,12 +9,57 @@
   list-style: none;
   display: flex;
   gap: 20px;
+  outline: none;
 }
 
-.dark-mode .mode-icon {
-  color: #fff;
+
+.dark-mode .header-nav a {
+  color: #fff; 
 }
 
-.light-mode .mode-icon {
-  color: #212121;
+
+.header-mode-switch {
+  display: flex;
+  align-items: center;
 }
+
+.header-mode-switch mode-icon {
+  display: none;
+}
+
+.slider {
+  position: relative;
+  display: inline-block;
+  width: 40px;
+  height: 20px;
+  background-color: #ccc;
+  border-radius: 34px;
+  margin: 0 10px;
+}
+
+.slider:before {
+  position: absolute;
+  content: '';
+  height: 16px;
+  width: 16px;
+  left: 2px;
+  bottom: 2px;
+  background-color: white;
+  border-radius: 50%;
+  transition: 0.4s;
+}
+
+#mode-switch {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+input:checked + .slider {
+  background-color: #2196F3;
+}
+
+input:checked + .slider:before {
+  transform: translateX(20px);
+}
+
